# galaga

./: CMakeLists.txt
src/: assets.h  assets_bg.cpp  assets_main.cpp  background.cpp  background.h  config.h  galaga.cpp  galaga.h  loader.cpp  main.cpp  spriteInfo.cpp  timer.cpp  timer.h
src/misc/: defer.h  format_bmp.h
src/models/: basic.cpp  model.cpp  model.h
src/models/background/: background.cpp  background.h
src/models/bullet/: bullet.cpp  bullet.h
src/models/enemy1/: enemy1.cpp  enemy1.h
src/models/enemy2/: enemy2.cpp  enemy2.h
src/models/gun/: gun.cpp  gun.h
src/models/spaceship/: spaceship.cpp  spaceship.h
